--- a/style.css
+++ b/style.css
@@ -1,3 +1,36 @@
+/* Navbar  */
+.navbar {
+  background-color: #1a237e;
+}
+
+.navbar .container-fluid a {
+  color: white;
+}
+
+.jumbotron img {
+  height: 100vh;
+  width: 100%;
+}
+
+.jumbotron-title {
+  color: yellow;
+}
+
+.jumbotron-text {
+  color: yellow;
+}
+
+.dropdown-menu {
+  background-color: #1a237e;
+}
+
+.layanan-public {
+  background-color: #1a237e;
+  color: white;
+  margin-top: -5px;
+  margin-bottom: -5px;
+}
+
 /* banner */
 .banner-title {
   font-size: 36px;
